统一界面管理、状态：showContent、Loading、empty、Error、NoNet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="blue">#FF375BF1</color>
     <color name="yellow">#FFF7D23E</color>
     <color name="green">#FF34A350</color>
-
+    <color name="clr_gray_8a92a1">#8a92a1</color>
 </resources>
