使用ListView作为展示页，包括下拉刷新，加载更多

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow">#FFF7D23E</color>
     <color name="green">#FF34A350</color>
     <color name="clr_gray_8a92a1">#8a92a1</color>
+    <color name="clr_gray_4e5257">#4e5257</color>
 </resources>
